# musicbib

./: .gitignore  CMakeLists.txt  README.md
assets/: musiclibrary.template
include/: IMusicLibrary.h  LibraryProvider.h  MusicTitle.h
src/: LibraryProvider.cpp  MusicTitle.cpp  main.cpp
tests/: test_LibraryProvider.cpp  test_main.cpp
